--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,9 @@ inputs:
   registry:
     description: 'Registry url'
     required: true
+  namespace:
+    description: 'Registry namespace'
+    required: true
   password:
     description: 'Password'
     required: true
@@ -30,40 +33,25 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to Scaleway registry
-      uses: docker/login-action@v2
+    - uses: OpenSourcePolitics/build-and-push-images-action@master
       with:
         registry: ${{ inputs.registry }}
-        username: ${{ inputs.username }}
         password: ${{ inputs.password }}
-    - name: Cache Docker layers
-      uses: actions/cache@v2
-      with:
-        path: /tmp/.buildx-cache
-        key: ${{ runner.os }}-buildx-${{ inputs.image_name }}
-        restore-keys: |
-          ${{ runner.os }}-buildx-${{ inputs.image_name }}
-    - name: Build image
-      uses: docker/build-push-action@v3
-      with:
-        cache-from: type=local,src=/tmp/.buildx-cache,mode=max
-        cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
-        outputs: type=docker,compression=gzip
-        tags: ${{ inputs.image_name }}:develop
+        username: ${{ inputs.username }}
+        image_name: ${{ inputs.image_name }}
+        tag: ${{ inputs.tag }}
+        push: false
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
     - name: Test build
       shell: bash
       run: |
-        docker run --rm -d \
+        docker run --rm -d
           --add-host=host.docker.internal:host-gateway \
           -e DATABASE_USERNAME=${{inputs.database_username}} \
           -e DATABASE_PASSWORD=${{inputs.database_password}} \
           -e DATABASE_HOST=${{inputs.database_host}} \
           -p 3000:3000 \
-          --name decidim-app ${{ inputs.image_name }}:${{ inputs.tag }}
+          --name decidim-app ${{ input.registry }}/${{ input.namespace })/${{ inputs.image_name }}:${{ inputs.tag }}
         docker exec decidim-app bundle exec rake db:create db:migrate
         test_build.sh
